k8s/snapchat-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: snapchat-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      component: snapchat
  template:
    spec:
      containers:
        - name: all-service
          image: prithwin/all-service:1.0
          ports:
            - containerPort: 9000
    metadata:
      labels:
        component: snapchat
