k8s/snapchat-runner-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: snapchat-runner-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      component: snapchat-runner
  template:
    spec:
      containers:
        - name: all-service
          image: prithwin/all-service:1.0
          ports:
            - containerPort: 9000
    metadata:
      labels:
        component: snapchat-runner
