k8s/cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    component: cache
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
