k8s/database-clusterip-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mysql
spec:
  type: ClusterIP
  selector:
    component: database
  ports:
    - port: 3306
      targetPort: 3306
