k8s/kafka-clusterip-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: kafka
spec:
  type: ClusterIP
  selector:
    component: as-commit-log
  ports:
    - port: 9092
      name: a
      targetPort: 9092
    - port: 2181
      name: b
      targetPort: 2181
