k8s/snapchat-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snapchat
spec:
  type: ClusterIP
  selector:
    component: snapchat
  ports:
    - port: 9000
      targetPort: 9000
