k8s/snapchat-runner-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snapchat-runner-service
spec:
  type: ClusterIP
  selector:
    component: snapchat-runner
  ports:
    - port: 9000
      targetPort: 9000
