k8s/twitter-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: twitter
spec:
  type: ClusterIP
  selector:
    component: twitter
  ports:
    - port: 9000
      targetPort: 9000
